# KazuEngine

./: .gitignore  CMakeLists.txt
assets/scenes/: sample-scene.json
docs/: 设计方案.md
docs/knowledge/: 00-vulkan-overview.md  01-triangle-mvp.md  05-00d-csm-prep-lighting-config-and-shader-boundary.md
docs/nano/: 05-00b-hdr-present-pipeline-light.md  05-01-pbr-direct-lighting.md  05-04-ssao.md
docs/workflow/: 01-principles.md  02-checklist.md  03-session-log.md  04-implementation-roadmap.md
shaders/: bloom_downsample.comp  bloom_threshold.comp  bloom_upsample.comp  brdf_lut.comp  cubemap_tonemap.comp  equirect_to_cube.comp  fxaa.comp  gbuffer.frag  hiz_build.comp  irradiance.comp  lighting.frag  lighting.vert  lightvisualize.frag  lightvisualize.vert  prefilter_env.comp  present.frag  shadowmap.frag  shadowmap.vert  ssao.comp  ssao_blur.comp  ssr.comp  ssr_blur_h.comp  ssr_blur_v.comp  taa.comp  tonemap.comp  triangle.frag  triangle.vert
src/: main.cpp
src/app/: AppUI.cpp  AppUI.h  Application.cpp  Application.h
src/core/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Context.cpp  Context.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  GPUTimer.cpp  GPUTimer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  Path.h  PipelineLayout.cpp  PipelineLayout.h  RenderPass.cpp  RenderPass.h  Sampler.cpp  Sampler.h  ShaderModule.cpp  ShaderModule.h  Swapchain.cpp  Swapchain.h  SyncObjects.cpp  SyncObjects.h  Utils.h  VmaImplementation.cpp
src/pass/: BRDFLutPass.h  BloomPass.cpp  BloomPass.h  FXAAPass.cpp  FXAAPass.h  GBufferPass.cpp  GBufferPass.h  HiZPass.cpp  HiZPass.h  LightVisualizePass.cpp  LightVisualizePass.h  LightingPass.cpp  LightingPass.h  Pass.h  PresentPass.cpp  PresentPass.h  SSAOBlurPass.cpp  SSAOBlurPass.h  SSAOPass.cpp  SSAOPass.h  SSRBlurHPass.cpp  SSRBlurHPass.h  SSRCompositePass.cpp  SSRCompositePass.h  SSRPass.cpp  SSRPass.h  ShadowMapPass.cpp  ShadowMapPass.h  TAAPass.cpp  TAAPass.h  TonemapPass.cpp  TonemapPass.h
src/precompute/: BRDFLutPass.cpp  CubemapTonemapPass.cpp  CubemapTonemapPass.h  EquirectToCubePass.cpp  EquirectToCubePass.h  IrradiancePass.cpp  IrradiancePass.h  PrecomputeManager.cpp  PrecomputeManager.h  PrecomputePass.h  PrefilterEnvPass.cpp  PrefilterEnvPass.h
src/rendergraph/: Pass.h  RenderGraph.cpp  RenderGraph.h
src/rhi/: Bounds.h  Camera.cpp  Camera.h  DescriptorSetLayoutCache.cpp  DescriptorSetLayoutCache.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PipelineBuilder.cpp  PipelineBuilder.h  PipelineCache.cpp  PipelineCache.h  PipelineState.h  RHI.cpp  RHI.h  ShaderEffect.cpp  ShaderEffect.h  ShaderLibrary.cpp  ShaderLibrary.h  ShaderReflection.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
src/scene/: Light.h  RendererSettings.h  Scene.cpp  Scene.h  ShadowCamera.h
src/technique/: DeferredShading.cpp  DeferredShading.h  Technique.h
